adjusted image sizes removed global section style, check for accessibilty and other spacing issues

--- a/resources/css/Sass/Utilities/_global.scss
+++ b/resources/css/Sass/Utilities/_global.scss
@@ -83,13 +83,3 @@ border-radius: 50%;
 width: 150px;
 height: 150px;
 }
-
-@media only screen and (max-width: $breakpoint-sm) { 
-
-  section {
-    margin: 2.5rem 0 2.5rem 0;
-  }
-
-  
-
-}
