--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -256,11 +256,6 @@ a {
   height: 150px;
 }
 
-@media only screen and (max-width: 576px) {
-  section {
-    margin: 2.5rem 0 2.5rem 0;
-  }
-}
 /* Font size */
 /* 18px */
 /*20 px*/
@@ -433,11 +428,6 @@ a {
   height: 150px;
 }
 
-@media only screen and (max-width: 576px) {
-  section {
-    margin: 2.5rem 0 2.5rem 0;
-  }
-}
 body {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
 }/*# sourceMappingURL=style.css.map */
